[package]
name = "adtp" # Alula's Data Transfer Protocol
version = "0.2.0"
edition = "2024"
description = "Alula's Data Transfer Protocol"
license = "MPL-2.0"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
chrono = {version = "0.4.41", features = ["alloc", "std", "clock", "now", "serde"]}